<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerDocontainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qual_abastecer_backg_abastcimentos" >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        tools:context="br.com.rafaelwms.qualabastecer.AbastecimentoActivity"
        tools:ignore="MergeRootFrame" >

        <TextView
            android:id="@+id/lblAbastecimentoTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblAbastecimentoTitulo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinnerVeiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/veiculo" 
                />

            <Spinner
                android:id="@+id/spinnerPosto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                />

        <TextView
            android:id="@+id/lblTipoCombustivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblCombustivelUsado"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioGasolina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gasResult" />

            <RadioButton
                android:id="@+id/radioEtanol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ethResult" />

            <RadioButton
                android:id="@+id/radioDiesel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dieselResult" />
        </LinearLayout>

        <TextView
            android:id="@+id/lblTipoSolicitacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblTipoSolicitacao"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioValorPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/null_text" />

            <EditText
                android:id="@+id/editValorPago"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintValorPago"
                android:inputType="numberDecimal" 
                android:imeOptions="actionNext"
>

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioLitros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/null_text" />

            <EditText
                android:id="@+id/editQtdLitros"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintLitres"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <EditText
            android:id="@+id/editKm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintKm"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:id="@+id/lblListaAbastecimentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblListaAbastecimento"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/listViewAbastecimentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>

</FrameLayout>