<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailsActivity" >

    <TextView
        android:id="@+id/textViewAct2Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/lblAct2Tilte"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblAct2Gas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAct2Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/lblAct2Gas"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblAct2GasPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblAct2Gas"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/lblAct2GasPrice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblAct2Eth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblAct2GasPrice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/lblAct2Eth"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblAct2EthPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAct2GasPrice"
        android:layout_centerVertical="true"
        android:text="@string/lblAct2EthPrice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnAct2Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:text="@string/btnAct2Back" />

    <TextView
        android:id="@+id/lblAct2Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAct2Back"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="@string/lblAct2Result"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
