<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act1ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/textViewTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/topApp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewGas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewTop"
            android:layout_below="@+id/textViewTop"
            android:layout_marginTop="18dp"
            android:text="@string/lblGas"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewEthanol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextGas"
            android:layout_below="@+id/editTextGas"
            android:layout_marginTop="17dp"
            android:text="@string/lblEthanol"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextEthanol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewEthanol"
            android:layout_below="@+id/textViewEthanol"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/fieldEthanol" />

        <EditText
            android:id="@+id/editTextGas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewGas"
            android:layout_below="@+id/textViewGas"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/fieldGas" />

        <TextView
            android:id="@+id/textViewLblResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonAct"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/lblBestFuel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLblResult"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/lblREsult"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextEthanol"
            android:layout_below="@+id/textViewResult"
            android:layout_marginTop="26dp"
            android:src="@drawable/flag" />

        <Button
            android:id="@+id/buttonAct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextEthanol"
            android:layout_below="@+id/editTextEthanol"
            android:layout_marginTop="33dp"
            android:text="@string/btnActLbl" />

        <Button
            android:id="@+id/buttonAct2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textViewLblResult"
            android:layout_alignRight="@+id/textViewTop"
            android:layout_toRightOf="@+id/textViewResult"
            android:text="@string/btnAct2lbl" />
    </RelativeLayout>

</ScrollView>
