<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qual_abastecer_backg_carros"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="br.edu.unibratec.qualabastecer.CarroActivity"
    tools:ignore="MergeRootFrame" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/lblDadosCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lblDadosCarro"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/edtCarroNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintCarroNome"
        android:inputType="text" 
        android:imeOptions="actionDone"/>
       


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/chkbCarroGas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasResult" 
			android:textAppearance="?android:attr/textAppearanceSmall"/>
        
        <CheckBox
            android:id="@+id/chkbCarroEth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ethResult" 
			android:textAppearance="?android:attr/textAppearanceSmall"/>
			
        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CheckBox"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/imgCarro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_carro" />

        <SeekBar
            android:id="@+id/seekBarG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/seekBarR"
            android:layout_below="@+id/seekBarR"
            android:max="255"
            android:progress="0" />

        <SeekBar
            android:id="@+id/seekBarB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBarG"
            android:layout_toRightOf="@+id/imgCarro"
            android:max="255"
            android:progress="0" />

        <TextView
            android:id="@+id/lblCarroCor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgCarro"
            android:layout_toLeftOf="@+id/seekBarG"
            android:text="@string/lblCarroCor"
            android:textAlignment="center" />

        <SeekBar
            android:id="@+id/seekBarR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imgCarro"
            android:max="255"
            android:progress="0" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/null_text"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/lblListaCarros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lblCarrosLista"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listViewCarros"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" >
    </ListView>

</LinearLayout>